fix text-align nei div di footer

--- a/css/style.css
+++ b/css/style.css
@@ -141,3 +141,7 @@ img{
     transform: translate(-50%, -50%);
     font-size: small;
 }
+
+footer div{
+    text-align: center;
+}
